objects/Milestone_Definition__c.object
<CustomObject>
    <description>Contains Project Type and Product attributes associated with a Milestone definition.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Products__c</fullName>
        <label>Count of Products</label>
        <summaryForeignKey>Project_Milestone_Definition_Product__c.Milestone_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Drive - Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dash - Small Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW - Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed - Powersports</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <description>Represents the step in the current 6 step process.  The introduction of this attribute on the Milestone Definition object supports project milestone sorting, representing the primary sorting field in the View and Edit Milestone pages.</description>
        <label>Process Step</label>
        <picklist>
            <picklistValues>
                <fullName>01-Implementation Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-Project Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Site Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-CDK GoLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-Ongoing Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy / Sell</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sort_Sequence__c</fullName>
        <label>Sort Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Milestone Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Market__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000000}</displayFormat>
        <label>Milestone Definition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestone Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Filled_Product_and_Project_Type</fullName>
        <active>true</active>
        <description>Product and Project Type cannot both be associated with a Milestone Definition.</description>
        <errorConditionFormula>IF( (  Count_of_Products__c  &lt;&gt; 0 ) &amp;&amp;  NOT( ISBLANK( Project_Type__c ) ) , TRUE, FALSE) &amp;&amp; NOT(BEGINS($User.Username,&quot;integration_user@adp.com&quot;))</errorConditionFormula>
        <errorMessage>Product and Project Type cannot both be associated with the same Milestone Definition.</errorMessage>
    </validationRules>
</CustomObject>